[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bare_client_auth_test"
version = "0.1.0"
description = "Client-auth-enabled bare Federated Learning test with Flower"
authors = [
    { name = "The Flower Authors", email = "hello@flower.ai" },
]
dependencies = [
    "flwr @ {root:parent:parent:uri}",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
